test/Fail/Issue1105.agda
module Issue1105 where

module So.Bad where
