test/Fail/Issue1105.err
Issue1105.agda:3.1-20: error: [QualifiedLocalModule]
Local modules cannot have qualified names
when scope checking the declaration
  module So.Bad where
